--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -114,6 +114,10 @@
             <mat-icon>add</mat-icon>
           </button>
 
+          <button mat-icon-button (click)="addNewColumn()" matTooltip="Add column" [disabled]="feeds().length === 0">
+            <mat-icon>add_column_right</mat-icon>
+          </button>
+
           @for (feed of feeds(); track feed.id) {
           <button class="feed-tab" mat-button [class.active]="feed.id === feedsCollectionService.activeFeedId()"
             (click)="selectFeed(feed.id)" [matTooltip]="feed.description || feed.label">
@@ -207,6 +211,12 @@
                 [disabled]="visibleColumnIndex() === columns().length - 1">
                 <mat-icon>chevron_right</mat-icon>
               </button>
+            </div>
+            }
+
+            @if (!isMobileView() && columns().length > 1) {
+            <div class="drag-handle" cdkDragHandle>
+              <mat-icon>drag_indicator</mat-icon>
             </div>
             }
 
